create routes module, shared navbar component and styles

--- a/src/app/pages/template/template.component.html
+++ b/src/app/pages/template/template.component.html
@@ -1,5 +1,6 @@
-<div class="container">
-	<form>
+<h2 class="title m-4">Template Form</h2>
+<div class="container d-flex align-items-center justify-content-center border border-dark pb-5 mt-5 w-50">
+	<form class="w-75">
   <div class="mt-5 mb-3">
     <label for="exampleInputEmail1" class="form-label">Email address</label>
     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
