--- a/src/app/pages/reactive/reactive.component.html
+++ b/src/app/pages/reactive/reactive.component.html
@@ -1,7 +1,8 @@
-<div class="container">
-	<form>
+<h2 class="title m-4">Reactive Form</h2>
+<div class="container d-flex align-items-center justify-content-center border border-dark pb-5 mt-5 w-50">
+	<form class="w-75">
   <div class="mt-5 mb-3">
-    <label for="exampleInputEmail1" class="form-label">Email address</label>
+    <label for="exampleInputEmail1" class="form-label">Email address </label>
     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
     <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
   </div>
