--- a/src/app/pages/reactive/reactive.component.html
+++ b/src/app/pages/reactive/reactive.component.html
@@ -4,18 +4,27 @@
 
 <div class="container d-flex align-items-center justify-content-center border border-dark pb-5 mt-5 w-50">
 
-	<form class="w-75">
+	<form class="w-75" [formGroup]="form" (ngSubmit)="save()">
     <div class="mt-5 mb-3">
-      <label for="exampleInputEmail1" class="form-label">Name</label>
-      <input type="text" class="form-control">
+      <label class="form-label">Name</label>
+      <input type="text"
+            class="form-control"
+            formControlName="name"
+       >
     </div>
     <div class="mb-3">
       <label class="form-label">Surename</label>
-      <input type="text" class="form-control">
+      <input type="text"
+       class="form-control"
+       formControlName="surename"
+       >
     </div>
     <div class="mt-5 mb-3">
       <label class="form-label">Email address</label>
-      <input type="email" class="form-control">
+      <input type="email"
+       class="form-control"
+       formControlName="email"
+       >
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
