--- a/src/app/pages/reactive/reactive.component.html
+++ b/src/app/pages/reactive/reactive.component.html
@@ -4,7 +4,7 @@
 
 <div class="container d-flex align-items-center justify-content-center border border-dark pb-5 mt-5 w-50">
 
-	<form class="w-75" [formGroup]="form" (ngSubmit)="save()">
+	<form form class="w-75" [formGroup]="form" (ngSubmit)="save()">
     <div class="mt-5 mb-3">
       <label class="form-label">Name</label>
       <input type="text"
@@ -27,6 +27,17 @@
        >
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+  </form>
 
 </div>
+
+<hr>
+<pre>
+  Estado del formulario: {{form.valid}}
+  <br>
+  Status: {{form.status}}
+</pre>
+
+<pre>
+  {{form.value | json}}
+</pre>
